[project]
name = "mcp-simpletest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.54.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.14",
    "fastmcp>=2.9.2",
    "google-generativeai>=0.8.5",
    "mcp>=1.9.4",
    "openai>=1.88.0",
]
